# scottco

./: DEPLOYMENT.md  README.md
job-description/: .gitignore  CLAUDE.md  README.md  README_WEBAPP.md  app.py  app.py.backup  chat.py  job_desc_generator_v2_anthropic.py  job_desc_generator_v2_mistral.py  output_formatter.py  pyproject.toml  requirements.txt
job-description/_archive/: job_desc_comprehensive.py  job_desc_iterative.py
job-description/static/: index.html  index.html.backup  script.js  script.js.backup  styles.css  styles.css.backup
job-description/tests/: __init__.py  conftest.py  test_api.py
job-evaluation/: .gitignore  DEMO.md  DEPLOYMENT.md  OVERVIEW.md  README.md  extract_matrix.py  pyproject.toml  tool1.1_output.json  tool1.2_clean.json  tool1.2_output.json  tool1.3_jd1.json  tool1.3_jd2.json  tool1.3_jd3.json  tool1.3_jd4.json  tool1.3_output.json
job-evaluation/.claude/: settings.local.json
job-evaluation/archive/: 90004752 - Rationale (EC).docx  90005777 - Rationale (BU).docx  90005777 Program Admin Officer 4 - JD.docx  90005812 Program Admin Officer 3 - JD.docx  90005812- Rationale (BU).docx  90005869 Program Admin Officer 1-2 - JD.docx  90005869- Rationale (BU).docx  90005901 - Rationale (EC).docx  90005901 ED Policy & Strategic Initiatives - JD.docx  EC 02 Project Assistant - 90001351.DOCX  EC 03 Administrative Assistant - 90000037.DOCX  EC 03 Property and Personnel Administrator - 90000108.DOCX  EC 05 Communications and Correspondence Clerk - 90004124.DOCX  EC 05 Executive Assistant - 90005280.DOCX  EC 06 Cabinet Committee Coordinator - 90000138.DOCX  EC 06 Executive Assistant to CEO - 90000842.DOCX  EC 07 Associate HR Business Partner - 90000893.DOCX  EC 07 Corporate Services Coordinator - 90000270.DOCX  EC 07 Senior Executive Administrative Coordinator - 90004031.DOCX  EC 08 Governance Consultant - 90004214.DOCX  EC 08 Manager Operations and Projects (Family) - 90001035.DOCX  EC 08 Supervisor Support Services - 90004703.DOCX  EC 09 Coordinator Financial Management - 90004707.DOCX  EC 09 Revenue Policy Officer - 90001414.DOCX  EC 10 Maintenance Enforcement Program (MEP) Coordinator - 90000913.DOCX  EC 10 Policy and Research Analyst - 90001329.DOCX  EC 10 Unit Supervisor Secure Care - 90001594.DOCX  (+24 more)
(+56 files in other folders)
